# Procedure_suite

./: .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_ASSISTANT_GUIDE.md  CLAUDE.md  CODER_LLM_ADVISOR_SETUP.md  CODEX_ENHANCEMENTS_SUMMARY.md  CODEX_INTEGRATION_VERIFICATION.md  CODEX_TROUBLESHOOTING.md  CPT_CODES_REFERENCE.md  GEMINI_SETUP.md  MERGING_CHANGES.md  Makefile  NOTES_SCHEMA_REFACTOR.md  Output_examples.txt  README.md  SETUP_MAC.md  V4_CLEANUP_GUIDE.md  VERIFICATION_SUMMARY.md  agents.md  batch_extraction_review.txt  debug_ner.py  diagnose_codex.sh  failures.jsonl  geminiquota.py  gitingest.md  gitingest_details.md  institutions.jsonl  ip_golden_knowledge_v2_2.json  my_changes.patch  my_results.txt  my_results1.txt  my_results2.txt  my_results_V3.txt  my_results_V5.txt  my_results_after_fix.txt  my_results_batch_3.txt  my_results_batch_4.txt  my_results_v2.txt  (+31 more)
.venv_pdf/: pyvenv.cfg
Registry-First ML Data Preparation/: INTEGRATION_GUIDE.md  golden_to_csv.py  makefile_snippet.mk  registry_data_prep.py  test_registry_data_prep.py
alembic/: env.py
analysis/: synthetic_notes_eval.txt  synthetic_notes_eval_detailed.txt
api/: app.py  enhanced_coder_routes.py
archive/: README.md
artifacts/: redactions.jsonl
cms_rvu_tools/: IP_Registry_Enhanced_v2.json  README.md  cms_rvus_2025_ip.csv  local_rvu_updater.py  rvu_fetcher.py
config/: settings.py
data/: allowlist_terms.txt  coding_traces.jsonl  my_registry_dump.jsonl  registry2_errors.jsonl  registry2_full_validation.txt  registry2_validation_output.txt  registry_errors.jsonl  stats.json  (+3 more)
(+2516 files in other folders)
